fixed alignment of project contents

--- a/ray-portfolio/src/pages/styles.css
+++ b/ray-portfolio/src/pages/styles.css
@@ -63,10 +63,6 @@ body {
   font-size: 40px
 }
 
-.projects {
-  margin: auto;
-}
-
 .projectimage_container {
   max-width: 100%;
   border-radius: 10px;
@@ -114,6 +110,7 @@ body {
 }
 
 .projectcontent {
+  margin: auto;
   max-width: 800px;
 }
 
